# aprender-rust-espanol

./: .gitignore  README.org  upload_git.sh
PresentacionMeetup-05-2023/: GUION.org
PresentacionMeetup-05-2023/img/: paciencia.avif
aprenderasync/: Cargo.toml
pirata/: Cargo.toml
pirata/src/: main.rs
sesion1/: #guia.org#
sesion1/guessgame/src/: main.rs
sesion10/aprenderasync/: Cargo.toml
sesion11/unixsocket/server/: Cargo.toml
sesion12/conversion/: Cargo.toml
sesion12/conversion/src/: main.rs
sesion12/rust_unixsocket/src/: handler.rs
sesion13/sesion_13_rust/rust_unixsocket/: Cargo.toml
sesion14/: func_haskell.org
sesion16/my-redis/: Cargo.toml
sesion16/my-redis/src/: main.rs
sesion17/: guia.org
sesion17/my-redis/: Cargo.toml
sesion17/test_db/src/: main.rs
sesion17/variables_ambiente/src/: main.rs
sesion18/: .~lock.tabla_excel.ods#  DESCRIPCION.org
sesion18/test_db/: .#guia.org  Cargo.toml  DESCRIPCION.org  ciudades.csv  ciudades_id.csv  guia.org  temperaturas.csv
sesion18/test_db/src/: main.rs
sesion18/test_db2/: Cargo.toml
sesion19/: #README.org#  .#README.org  README.org
sesion2/pirata/src/: main.rs
sesion2/pirata_py/una aventura pirata/: taller.org  taller.org~
sesion20/fixtures/: ciudades.csv
sesion20/test_db2/: Cargo.toml
sesion20/test_db2/migrations/: 20230429142840_crear_tabla_temperatura.down.sql
sesion20/test_db2/src/api/: ciudad.rs  temperatura.rs
sesion20/test_db2/tests/api/: ciudad.rs
sesion21/: #README.org#  .#README.org  README.org
sesion21/ejemplo_db2/: Cargo.toml
sesion22/: RADME.org
sesion22/creando-macros/: Cargo.toml
sesion22/crear-proc-macro/: Cargo.toml
sesion3/archivos/: ejercicios.html
sesion3/prueba_result/: Cargo.toml
sesion3/usopath/: Cargo.toml
sesion4/: temperaturas.csv
sesion4/list/: Cargo.toml
sesion6/: linea_a_linea.org  notas.org
sesion6/libritos/: Hollos, Stefan_ Hollos, J. Richard - Finite Automata and Regular Expressions_ Problems and Solutions-Abrazol Publishing (2013).azw3  Masami Ito - Algebraic theory of automata and languages-World Scientific Publishing Company (2004).djvu
sesion6/search_numeros/: Cargo.toml
sesion7/: notas.org
sesion7/buscar_alimento/: Cargo.toml
sesion8/dias_vividos/: Cargo.toml
sesion8/tiempo_vivido/: Cargo.toml  personas.csv
sesion9/: notas.org
sesion9/ejclosures/: Cargo.toml
sesion9/hilos_mutex/: Cargo.toml
sesion_01/: guia.org
sesion_01/guessgame/: Cargo.toml
sesion_02/pirata_py/: barcos.csv
sesion_03/: guia.org
sesion_03/archivos/: limit_values.c  poema.org
sesion_04/archivos/: ejercicios.org  test_h2int.c  usoswitch.c
sesion_04/leercsv/: Cargo.toml
sesion_04/usopath/: poema_real.org
sesion_06/buscar_alimento/: Cargo.toml
sesion_07/ejemplo_rc/: Cargo.toml
sesion_08/dias_vividos/: personas.csv
sesion_09/hilos/: Cargo.toml
sesion_10/aprender_async_std/: Cargo.toml
sesion_11/unixsocket-ejemplo-base/socket_server/: Cargo.toml
sesion_11/unixsocket-ejemplo-base/socket_server/src/: main.rs
sesion_11/unixsocket-ejemplo-base/socket_server/src/ejemplos/: #base.rs#  base.rs  multi_client.rs
sesion_12/rust_unixsocket/: Cargo.toml
sesion_12/rust_unixsocket/src/: read.rs
sesion_13/: #notas.org#  notas.org
sesion_13/bits_operations/: Cargo.toml
sesion_13/conversion_float/: Cargo.toml
sesion_14/: func_rust.org
sesion_15/: func_haskell.org  func_rust.org  func_rust_15.org
sesion_16/: guia.org
sesion_17/: guia.org
sesion_17/test_db/: Cargo.toml
sesion_17/variables_ambiente/: .env  Cargo.toml
sesion_18/: README.org  tabla_excel.ods
sesion_18/test_db/: ciudades.csv  ciudades_id.csv
sesion_20/: README.org
sesion_20/fixtures/: temperaturas.csv
sesion_21/: README.org
sesion_21/ejemplo_db2/: .env
sesion_22/: README.org
sesion_22/usando-macros/: Cargo.toml
sesion_23/: README.org
sesion_23/creando_nuevas_macros/: Cargo.toml
sesion_24/: README.org
sesion_24/coleccion_macros/: Cargo.toml
sesion_24/coleccion_macros/src/: lib.rs
sesion_24/timing/: Cargo.toml
sesion_24/usar-macros/: Cargo.toml
sesion_24/usar-macros/src/: main.rs
sesion_25/: README.org
sesion_25/api-prueba/: prueba.proto
sesion_25/prueba-saludo/: Cargo.toml  build.rs
sesion_25/prueba-saludo/src/: #server.rs#  .#server.rs  client.rs  lib.rs  server.rs
sesion_26/: README.org
sesion_26/api-grpc/: primos.proto
sesion_26/primos-service/: build.rs
sesion_27/: #README.org#  .#README.org  README.org
sesion_27/servicio-primos/primos-service/: Cargo.toml
sesion_27/servicio-primos/primos-service/src/: client.rs  lib.rs  server.rs
sesion_28/: README.org  ejemplos
sesion_28/api/: status.proto
sesion_28/grpc-device-status/: Cargo.toml  build.rs
sesion_28/grpc-device-status/src/app/: client.rs  server.rs
sesion_28/grpc-device-status/src/service/: status.rs
sesion_29/: README.org
sesion_29/grpc-device-status/: Cargo.toml  privkey.pem
sesion_29/grpc-device-status/src/app/: #mod.rs#  server_ssl.rs
sesion_29/grpc-device-status/src/service/: status.rs
sesion_29/grpc-device-status/ssl/: public.key  safe.crt
sesion_29/test-vars/: Cargo.toml
sesion_30/: #README.org#  .#README.org  README.org
sesion_30/api/: status.proto
sesion_30/ejemplos/: MyCertificate.crt  MyKey.key
sesion_30/generar-ssl/: guia.org
sesion_30/grpc-device-status/: Cargo.toml  create_certs.sh  datos.csv  key.pem
sesion_31/: README.org
sesion_31/train_iced/: Cargo.toml
sesion_32/: README.org
sesion_32/train_iced/: Cargo.toml
sesion_32/train_iced/examples/download_progress/: Cargo.toml
sesion_32/train_iced/examples/download_progress/src/: download.rs  main.rs
sesion_32/train_iced/examples/game_of_life/: Cargo.toml
sesion_32/train_iced/examples/game_of_life/src/: main.rs
sesion_32/train_iced/examples/hola_mundo/: Cargo.toml
sesion_32/train_iced/examples/modal/: Cargo.toml
sesion_32/train_iced/examples/modal/src/: main.rs  modal.rs
sesion_33/: README.org  iced  train_iced
sesion_34/: README.org
sesion_34/primos/: Cargo.toml
sesion_34/string_sum/: Cargo.toml
(+158 files in other folders)
