[package]
name = "test_db2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures = "0.3.28"
sqlx = { version = "0.6.3", features =["runtime-tokio-native-tls","postgres", "all-types"] }
tokio = { version = "1.27.0", features = ["full"] }
