[package]
name = "tiempo_vivido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.1.6"
serde = { version = "1.0.152", features = ["derive", "serde_derive", "rc"] }
