[package]
name = "rust_unixsocket"
version = "0.1.0"
edition = "2021"

# Example of customizing the library in Cargo.toml.
[lib]
name = "rust_unixsocket"
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "futures-core", "async-process", "async-attributes"] }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive", "serde_derive", "alloc", "rc"] }
serde_bytes = "0.11.9"


[[bin]]
name = "servidor_unix"
path = "src/comandos/server.rs"


[[bin]]
name = "cliente_unix"
path = "src/comandos/cliente.rs"


	
