[package]
name = "coleccion_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = { version = "1.0.163", features = ["derive", "serde_derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"