[package]
name = "usar-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive", "string"] }
serde = { version = "1.0.163", features = ["serde_derive", "derive"] }
csv = "1.2.2"
coleccion_macros = {path="../coleccion_macros"}