[package]
name = "grpc-device-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grpc_device_status"
path = "src/lib.rs"


[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.28.2", features = ["tokio-macros", "macros", "full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tonic = "0.9.2"
futures-util = "0.3.28"
futures-core = "0.3.28"
device_status = {git = "https://gitlab.com/centro-sismologico/device-info-status"}
dotenv = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
inquire = { version = "0.6.2", features = ["date"] }
tokio-rustls = "0.24.1"
tower-http = { version = "0.4.1", features = ["full"] }
rustls-pemfile = "1.0.3"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
path = "src/app/server.rs"

[[bin]]
name = "server_ssl"
path = "src/app/server_ssl.rs"

[[bin]]
name = "client"
path = "src/app/client.rs"
