[package]
name = "train_iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
iced = { version = "0.10.0", features = ["canvas", "tokio", "debug"] }
itertools = "0.11.0"
rustc-hash = "1.1.0"
tokio = { version = "1.29.1", features = ["sync"] }


[workspace]
members = [
		"examples/*"
]
