[package]
name = "socket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "futures-core", "async-process"] }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive", "alloc", "rc"] }
serde_bytes = "0.11.9"
